--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="Göktuğ Aşcı, MD" />
     <meta property="og:description" content="I am a medical doctor and a data scientist who builds full-stack cross-platform mobile
             applications. My passion is to bridge the gap between software
-            engineering and medicine; to develop data-driven, inexpensive and
+            engineering and medicine; to generate data-driven, inexpensive and
             simple, yet broadly applicable solutions to improve health care
             quality around the world." />
     <meta property="og:type" content="website" />
@@ -90,7 +90,7 @@
                 </h2>
                 <p class="lead mb-5">
                     I am <strong>a medical doctor</strong> and <strong>a data scientist</strong> who develops
-                    <strong>full-stack, cross-platform software</strong>. My passion is to bridge the gap between software engineering and medicine to develop <strong>data-driven, inexpensive, and simple yet
+                    <strong>full-stack, cross-platform software</strong>. My passion is to bridge the gap between software engineering and medicine to generate <strong>data-driven, inexpensive, and simple yet
                         broadly applicable solutions to improve health care quality</strong> around the world.
                 </p>
                 <div class="social-icons">
@@ -210,7 +210,7 @@
                                 Implemented a content-based recommender system that made it possible to write personalized diet lists in less than 15 minutes.
                             </li>
                             <li>
-                                Designed and developed all front-end (Buefy.js, Vue.js, Apache Cordova) and back-end (AWS RDS, AWS S3, Heroku, Django) features using cross-platform software allowing development and maintenance on one codebase for web, iOS, and Android applications.
+                                Designed and coded all front-end (Buefy.js, Vue.js, Apache Cordova) and back-end (AWS RDS, AWS S3, Heroku, Django) features using cross-platform software allowing development and maintenance on one codebase for web, iOS, and Android applications.
                             </li>
                             <li>
                                 Launched marketing campaigns and tracked KPIs using Google Ads and Facebook Ads enabling 8000 users to develop healthy eating habits.
@@ -274,7 +274,10 @@
                         </div>
                         <ul>
                             <li>
-                                Designed and developed all front-end (Materialize.css, jQuery, Apache Cordova) features using cross-platform software allowing development and maintenance on one codebase for web, iOS, and Android applications.
+                                Led a team of 25+ medical educators generating 9000+ questions and helping 600000+ medical questions to be studied, improving online medical education quality in Turkey.
+                            </li>
+                            <li>
+                                Designed and coded all front-end (Materialize.css, jQuery, Apache Cordova) features using cross-platform software allowing development and maintenance on one codebase for web, iOS, and Android applications.
                             </li>
                         </ul>
                     </div>
