--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                                 Designed and coded all front-end (Buefy.js, Vue.js, Apache Cordova) and back-end (AWS RDS, AWS S3, Heroku, Django) features using cross-platform software allowing development and maintenance on one codebase for web, iOS, and Android applications.
                             </li>
                             <li>
-                                Launched marketing campaigns and tracked KPIs using Google Ads and Facebook Ads enabling 8000+ users to develop healthy eating habits.
+                                Launched marketing campaigns and tracked KPIs using Google Ads and Firebase enabling 8000+ users to develop healthy eating habits.
                             </li>
                         </ul>
                     </div>
