--- a/index.html
+++ b/index.html
@@ -388,6 +388,11 @@
                 <h6 class="mt-3">Data Science & Big Data</h6>
                 <ul class="fa-ul mb-0">
                     <li class="mb-2">
+                        <a href="https://github.com/gasci/health-data-scraper" target="_blank" class="text-danger">
+                            <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Biopython/Selenium/Beautiful Soup/MongoDB &#183; Health data scraping from social media&nbsp;<i class="fas fa-link"></i>
+                        </a>
+                    </li>
+                    <li class="mb-2">
                         <a href="https://github.com/alakise/Cleveland-Heart-Disease-Dataset-Sandbox/blob/main/classification/classification.ipynb" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Scikit-learn/XGBoost &#183; Predicting the chance of heart attack on Cleveland Heart Disease Dataset&nbsp;<i class="fas fa-link"></i>
                         </a>
