--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                 <ul class="fa-ul mb-0">
                     <li class="mb-2">
                         <a href="https://github.com/gasci/health-data-scraper" target="_blank" class="text-danger">
-                            <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Biopython/Selenium/Beautiful Soup/MongoDB &#183; Health data scraping from social media&nbsp;<i class="fas fa-link"></i>
+                            <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Selenium/Beautiful Soup/MongoDB &#183; Health data scraping from social media&nbsp;<i class="fas fa-link"></i>
                         </a>
                     </li>
                     <li class="mb-2">
