--- a/index.html
+++ b/index.html
@@ -207,13 +207,13 @@
                         </div>
                         <ul>
                             <li>
-                                Implemented a content-based recommender system that made it possible to write personalized diet lists in less than 15 minutes.
+                                Implemented a content-based recommender system that made it possible to write personalized diet lists in less than 15 minutes
                             </li>
                             <li>
-                                Designed and coded all front-end (Buefy.js, Vue.js, Apache Cordova) and back-end (AWS RDS, AWS S3, Heroku, Django) features using cross-platform software allowing development and maintenance on one codebase for web, iOS, and Android applications.
+                                Designed and coded all front-end (Buefy.js, Vue.js, Apache Cordova) and back-end (AWS RDS, AWS S3, Heroku, Django) features using cross-platform software allowing development and maintenance on one codebase for web, iOS, and Android applications
                             </li>
                             <li>
-                                Launched marketing campaigns and tracked KPIs using Google Ads and Firebase enabling 8000+ users to develop healthy eating habits.
+                                Launched marketing campaigns and tracked KPIs using Google Ads and Firebase enabling 8000+ users to develop healthy eating habits
                             </li>
                         </ul>
                     </div>
@@ -231,10 +231,10 @@
                         </div>
                         <ul>
                             <li>
-                                Created Crunchbase e-mail automations and developed web scraping scripts enabling origination of 100+ companies in a few minutes.
+                                Created Crunchbase e-mail automations and developed web scraping scripts enabling origination of 100+ companies in a few minutes
                             </li>
                             <li>
-                                Arranged 30+ meetings with high-potential companies and created 2 one-pagers that summarize business models and opportunities for the investment committee.
+                                Arranged 30+ meetings with high-potential companies and created 2 one-pagers that summarize business models and opportunities for the investment committee
                             </li>
                         </ul>
                     </div>
@@ -254,7 +254,7 @@
                             <li>
                                 Completed rotations in <strong>General Surgery, Pediatrics, Internal Medicine,
                                     Gynaecology, Neurology, Cardiology, Pulmonology, Emergency Medicine, Psychiatry,
-                                    Dermatology, Family Medicine, and Algology.</strong>
+                                    Dermatology, Family Medicine, and Algology</strong>
                             </li>
                         </ul>
                     </div>
@@ -274,10 +274,10 @@
                         </div>
                         <ul>
                             <li>
-                                Led a team of 25+ medical educators generating 9000+ questions and helping 600000+ medical cases to be studied, improving online medical education quality in Turkey.
+                                Led a team of 25+ medical educators generating 9000+ questions and helping 600000+ medical cases to be studied, improving online medical education quality in Turkey
                             </li>
                             <li>
-                                Designed and coded all front-end (Materialize.css, jQuery, Apache Cordova) features using cross-platform software allowing development and maintenance on one codebase for web, iOS, and Android applications.
+                                Designed and coded all front-end (Materialize.css, jQuery, Apache Cordova) features using cross-platform software allowing development and maintenance on one codebase for web, iOS, and Android applications
                             </li>
                         </ul>
                     </div>
@@ -295,7 +295,7 @@
                         </div>
                         <ul>
                             <li>
-                                Performed 40+ plasmid DNA preparations; bacteria transformations; PCR and real-time PCR, gene cloning and mutagenesis procedures; cell culture and cell transfections and cell lysates for protein-protein interactions assays.
+                                Performed 40+ plasmid DNA preparations; bacteria transformations; PCR and real-time PCR, gene cloning and mutagenesis procedures; cell culture and cell transfections and cell lysates for protein-protein interactions assays
                             </li>
                         </ul>
                     </div>
@@ -430,7 +430,7 @@
                     </li>
                     <li class="mb-2">
                         <a href="https://github.com/gasci/sentimental-tweet-analysis" target="_blank" class="text-danger">
-                            <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Apache Hadoop, Apache Hive &#183; Sentimental Tweet Analysis of Tweets with #Spotify&nbsp;<i class="fas fa-link"></i>
+                            <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Apache Hadoop/Apache Hive &#183; Sentimental Tweet Analysis of Tweets with #Spotify&nbsp;<i class="fas fa-link"></i>
                         </a>
                     </li>
                 </ul>
