--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@
                 </h2>
                 <p class="lead mb-5">
                     I am <strong>a medical doctor</strong> and <strong>a data scientist</strong> who develops
-                    <strong>full-stack, cross-platform software</strong>. My passion is to bridge the gap between software engineering and medicine to generate <strong>data-driven, inexpensive, and simple yet
-                        broadly applicable solutions to improve health care quality</strong> around the world.
+                    <strong>full-stack, cross-platform software</strong>. My passion is to bridge the gap between software engineering and medicine to generate <strong>data-driven and inexpensive solutions to automate and improve healthcare services by utilizing big data and machine learning technologies.</strong>
                 </p>
                 <div class="social-icons">
                     <a class="social-icon shadow" href="mailto:drgoktugasci@gmail.com"><i
