--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h4 class="mb-0">IE SCHOOL OF HUMAN SCIENCES AND TECHNOLOGY</h4>
-                        <div class="subheading mb-3 text-capitalize">
-                            <a href="https://www.ie.edu/school-human-sciences-technology/masters/master-business-analytics-big-data/" target="_blank" class="text-danger text-capitalize">Master’s in Business Analytics and
+                        <div class="subheading mb-3">
+                            <a href="https://www.ie.edu/school-human-sciences-technology/masters/master-business-analytics-big-data/" target="_blank" class="text-danger">Master’s in Business Analytics and
                                 Big Data&nbsp;<i class="fas fa-link"></i>
                             </a>
                         </div>
@@ -132,8 +132,8 @@
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h4 class="mb-0">ISTANBUL UNIVERSITY, FACULTY OF MEDICINE</h4>
-                        <div class="subheading mb-3 text-capitalize">
-                            <a href="https://istanbultip.istanbul.edu.tr/en/_" target="_blank" class="text-danger text-capitalize">Doctor of Medicine&nbsp;<i class="fas fa-link"></i>
+                        <div class="subheading mb-3">
+                            <a href="https://istanbultip.istanbul.edu.tr/en/_" target="_blank" class="text-danger">Doctor of Medicine&nbsp;<i class="fas fa-link"></i>
                             </a>
                         </div>
                         <div>
@@ -154,8 +154,8 @@
                         <h4 class="mb-0">
                             THE UNIVERSITY OF ANTWERP, SCHOOL OF MEDICINE
                         </h4>
-                        <div class="subheading mb-3 text-capitalize">
-                            <a href="https://www.uantwerpen.be/en/" target="_blank" class="text-danger text-capitalize">Doctor of Medicine&nbsp;<i class="fas fa-link"></i>
+                        <div class="subheading mb-3">
+                            <a href="https://www.uantwerpen.be/en/" target="_blank" class="text-danger">Doctor of Medicine&nbsp;<i class="fas fa-link"></i>
                             </a>
                         </div>
                         <div>
@@ -172,8 +172,8 @@
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h4 class="mb-0">TEV İNANÇ HIGH SCHOOL</h4>
-                        <div class="subheading mb-3 text-capitalize">
-                            <a href="https://tevitol.k12.tr/" target="_blank" class="text-danger text-capitalize">A
+                        <div class="subheading mb-3">
+                            <a href="https://tevitol.k12.tr/" target="_blank" class="text-danger">A
                                 Privately Funded High School for Gifted Students&nbsp;<i class="fas fa-link"></i>
                             </a>
                         </div>
@@ -201,7 +201,7 @@
                             Co-Founder, Product Manager, Full-Stack Developer
                         </h4>
                         <div class="subheading mb-3">
-                            <a href="http://mealdoc.com/" target="_blank" class="text-danger text-capitalize">Mealdoc:
+                            <a href="http://mealdoc.com/" target="_blank" class="text-danger">Mealdoc:
                                 AI Powered Healthy Diet, Healthcare&nbsp;<i class="fas fa-link"></i></a>
                         </div>
                         <ul>
@@ -225,7 +225,7 @@
                     <div class="flex-grow-1">
                         <h4 class="mb-0">Investment Analyst Intern</h4>
                         <div class="subheading mb-3">
-                            <a href="https://www.vincivc.com/" target="_blank" class="text-danger text-capitalize">Vinci
+                            <a href="https://www.vincivc.com/" target="_blank" class="text-danger">Vinci
                                 Venture Capital&nbsp;<i class="fas fa-link"></i></a>
                         </div>
                         <ul>
@@ -246,7 +246,7 @@
                     <div class="flex-grow-1">
                         <h4 class="mb-0">Medical Intern</h4>
                         <div class="subheading mb-3">
-                            <a href="https://istanbultip.istanbul.edu.tr/en/_" target="_blank" class="text-danger text-capitalize">Istanbul University, Faculty of Medicine&nbsp;<i
+                            <a href="https://istanbultip.istanbul.edu.tr/en/_" target="_blank" class="text-danger">Istanbul University, Faculty of Medicine&nbsp;<i
                                     class="fas fa-link"></i></a>
                         </div>
                         <ul>
@@ -268,7 +268,7 @@
                             Co-Founder, Product Manager, Front-End Developer
                         </h4>
                         <div class="subheading mb-3">
-                            <a href="https://www.curiosmo.com/" target="_blank" class="text-danger text-capitalize">Curiosmo, Healthcare&nbsp;<i
+                            <a href="https://www.curiosmo.com/" target="_blank" class="text-danger">Curiosmo, Healthcare&nbsp;<i
                                     class="fas fa-link"></i></a>
                         </div>
                         <ul>
@@ -289,7 +289,7 @@
                     <div class="flex-grow-1">
                         <h4 class="mb-0">Research Intern</h4>
                         <div class="subheading mb-3">
-                            <a href="https://medicine.yale.edu/lab/gunel/" target="_blank" class="text-danger text-capitalize">Yale University School of Medicine, Gunel
+                            <a href="https://medicine.yale.edu/lab/gunel/" target="_blank" class="text-danger">Yale University School of Medicine, Gunel
                                 Lab&nbsp;<i class="fas fa-link"></i></a>
                         </div>
                         <ul>
