--- a/index.html
+++ b/index.html
@@ -62,10 +62,13 @@
                     <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="#languages">Languages</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#portfolio">Porfolio</a>
+                    <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#awards">Certifications</a>
@@ -307,8 +310,36 @@
         </section>
         <hr class="m-0" />
         <!-- Skills-->
+        <section class="resume-section" id="languages">
+            <div class="resume-section-content">
+                <h3 class="mb-5"><u>Languages</u></h3>
+                <div class="row">
+                    <div class="col-xl">
+                        <h6 class="mt-3">Turkish</h6>
+                        <ul>
+                            <li>Native</li>
+                        </ul>
+
+                        <h6 class="mt-3">English</h6>
+                        <ul>
+                            <li>Fluent</li>
+                            <li>
+                                <a href="assets/img/IELTS.png" target="_blank" class="text-danger">
+                                    IELTS: 7.5&nbsp;<i class="fas fa-link"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <hr class="m-0" />
+        <!-- Skills-->
         <section class="resume-section" id="skills">
             <div class="resume-section-content">
+
+
                 <h3 class="mb-5"><u>Skills</u></h3>
                 <div class="row">
                     <div class="col-xl">
@@ -740,5 +771,7 @@
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
 </body>
+
+</html>
 
 </html>
