--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                     </div>
                     <div class="flex-shrink-0 text-right">
                         <span class="text-primary font-weight-bold">Istanbul, Turkey</span><br />
-                        <span class="text-primary">July 2020 - Present</span>
+                        <span class="text-primary">June 2020 - April 2020</span>
                     </div>
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
