--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         </div>
                         <div>
                             <ul>
-                                <li>IE - TEV Joint Full Scholarship</li>
+                                <li>IE - TEV Joint Scholarship (100% of the fee + life expenses)</li>
                                 <li>GPA: 3.7/4</li>
                             </ul>
                         </div>
