--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
                                 <a href="https://doccano-dash.herokuapp.com/" target="_blank" class="text-danger">
                                     <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Healdash &#183; Text annotation &#183;
                                     Implemenatation of the open source Doccano machine learning crowdsourcing tool adapted for collecting
-                                    machine learning data from medical doctors<i class="fas fa-link"></i>
+                                    machine learning data from medical doctors&nbsp;<i class="fas fa-link"></i>
                                 </a>
                             </li>
                             <li class="mb-2">
