--- a/index.html
+++ b/index.html
@@ -573,8 +573,7 @@
                 <ul class="fa-ul mb-0">
                     <li class="mb-2">
                         <a href="https://link.springer.com/article/10.1007/s00406-018-0948-5" target="_blank" class="text-danger">
-                            <span class="fa-li"><i class="fas fa-book text-warning"></i></span>Effect of transcranial direct current stimulation on decision making and cognitive flexibility in gambling disorder&nbsp;
-                            <i class="fas fa-link"></i>
+                            <span class="fa-li"><i class="fas fa-book text-warning"></i></span>Effect of transcranial direct current stimulation on decision making and cognitive flexibility in gambling disorder&nbsp;<i class="fas fa-link"></i>
                         </a>
                     </li>
                     <li class="mb-2">
