--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                         <a class="nav-link active" data-toggle="tab" href="#Crowdsourcing">Crowdsourcing</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" data-toggle="tab" href="#ClassRegress">Classification/Regression</a>
+                        <a class="nav-link" data-toggle="tab" href="#MachineLearning">Machine Learning</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" data-toggle="tab" href="#DataVisualization">Data Visualization</a>
@@ -452,7 +452,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="tab-pane container fade" id="ClassRegress">
+                    <div class="tab-pane container fade" id="MachineLearning">
                         <ul class="fa-ul mb-0 mt-3">
                             <li class="mb-2">
                                 <a href="https://github.com/alakise/Heart-Disease/blob/main/classification/classification.ipynb" target="_blank"
