--- a/index.html
+++ b/index.html
@@ -209,13 +209,13 @@
                         </div>
                         <ul>
                             <li>
-                                Preprocessed and modeled 9000+ users’ anonymized health data to improve platform features and marketing performance
+                                Preprocessed and analyzed 10000+ users’ anonymized health data to improve platform features and marketing performance
                             </li>
                             <li>
                                 Designed and coded all front-end (Buefy.js, Vue.js, Apache Cordova) and back-end (AWS RDS, AWS S3, Heroku, Django) features using cross-platform software allowing development and maintenance on one codebase for web, iOS, and Android applications
                             </li>
                             <li>
-                                Launched marketing campaigns and tracked KPIs using Google Ads and Firebase enabling 9000+ users to develop healthy eating habits
+                                Launched marketing campaigns and tracked KPIs using Google Ads and Firebase enabling 10000+ users to develop healthy eating habits
                             </li>
                         </ul>
                     </div>
