--- a/index.html
+++ b/index.html
@@ -209,10 +209,10 @@
                         </div>
                         <ul>
                             <li>
-                                Preprocessed and analyzed 10000+ users’ anonymized health data to improve platform features and marketing performance
+                                Preprocessed and analyzed 10000+ users’ anonymized health data (Pandas, Scikit-learn) to improve platform features and marketing performance
                             </li>
                             <li>
-                                Designed and coded all front-end (Buefy.js, Vue.js, Apache Cordova) and back-end (AWS RDS, AWS S3, Heroku, Django) features using cross-platform software allowing development and maintenance on one codebase for web, iOS, and Android applications
+                                Designed and coded all front-end (Buefy.js, Vue.js, Apache Cordova) and back-end (AWS RDS, AWS S3, Heroku, Django, Django Rest Framework) features using cross-platform software allowing development and maintenance on one codebase for web, iOS, and Android applications
                             </li>
                             <li>
                                 Launched marketing campaigns and tracked KPIs using Google Ads and Google Analytics enabling 10000+ users to develop healthy eating habits
@@ -366,6 +366,7 @@
                             <li>AWS S3, RDS, EC2</li>
                             <li>SQL</li>
                             <li>MongoDB</li>
+                            <li>Docker</li>
                         </ul>
 
                         <h6>Data Science & Big Data</h6>
@@ -376,6 +377,8 @@
                             <li>Seaborn</li>
                             <li>Scikit-learn</li>
                             <li>Keras</li>
+                            <li>MLflow</li>
+                            <li>Tableau</li>
                             <li>Apache Spark</li>
                             <li>Apache Hadoop</li>
                             <li>Apache HBase</li>
