--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta property="og:title" content="Göktuğ Aşcı, MD" />
-    <meta property="og:description" content="I am a medical doctor and a data scientist who builds full-stack cross-platform mobile
+    <meta property="og:description" content="I am a medical doctor and a data engineer who builds full-stack cross-platform mobile
             applications. My passion is to bridge the gap between software
             engineering and medicine; to generate data-driven, inexpensive and
             simple, yet broadly applicable solutions to improve health care
@@ -92,7 +92,7 @@
                     <span class="text-danger"> MD</span>
                 </h2>
                 <p class="lead mb-5">
-                    I am <strong>a medical doctor</strong> and <strong>a data scientist</strong> who develops
+                    I am <strong>a medical doctor</strong> and <strong>a data engineer</strong> who develops
                     <strong>full-stack, cross-platform software</strong>. My passion is to bridge the gap between software engineering and medicine to generate <strong>data-driven and inexpensive solutions to automate and improve healthcare services by utilizing big data and machine learning technologies.</strong>
                 </p>
                 <div class="social-icons">
