--- a/siir.html
+++ b/siir.html
@@ -145,6 +145,18 @@
 
             <div class="card shadow">
                 <div class="card-body">
+                    <p class="card-title">BİR EDEN</p>
+                    <p class="card-text">
+                        Ben ile sen bir kenarda<br>
+                        Sen, benin yansıması<br>
+                        Sanrısı arasında tanrının<br>
+                        Bir benden iki bedenden<br>
+                    </p>
+                </div>
+            </div>
+
+            <div class="card shadow">
+                <div class="card-body">
                     <p class="card-title">SIFIR</p>
                     <p class="card-text">
                         kötü biri değildi, kızmazdı <br> ama ne akıl verirdi, ne de iyi biri'ydi <br> zarar vermez, görmez ya da dinlemezdi <br> çünkü varlığı ile yokluğu bir'di <br>
@@ -164,6 +176,23 @@
                         <br> Kokusu kapağa sindi<br> solmuş çiçeklerin,<br> korkmuş böcekler<br> dibe indi<br>
                         <br> Zamansız bir sonbaharla<br> sararan tenimde<br> kanayan bir kağıt kesiği<br>
 
+                    </p>
+                </div>
+            </div>
+
+            <div class="card shadow">
+                <div class="card-body">
+                    <p class="card-title">SEN &#8745; SİZ'LİK</p>
+                    <p class="card-text">
+                        18 ve 30 ve 45<br>
+                        (18 artı 45) bölü 2 eşittir 30<br>
+                        ya da<br>
+                        30 bölü 2 eşittir 18 ve de<br>
+                        30 artı 18 eşittir 45<br>
+                        çünkü<br>
+                        2 çarpı 18 eşittir 30<br>
+                        ve bundandır ki<br>
+                        45 eksi 18 eşittir 30<br>
                     </p>
                 </div>
             </div>
