--- a/siir.html
+++ b/siir.html
@@ -111,18 +111,6 @@
 
             <div class="card shadow">
                 <div class="card-body">
-                    <p class="card-title">İSTANBUL</p>
-                    <p class="card-text">eski bir hikâyeymiş İstanbul<br> zaman durmuş köprülerinde<br> denizlerine dökülmüş sevgiler<br>
-                        <br> eski bir hikâyeymiş İstanbul<br> harfleri silinmiş, sonu eksilmiş<br> okumuşlar ama bitirmemişler
-                        <br>
-                        <br> eski bir hikâyeymiş İstanbul,<br> bulutlarına saklanmış bilmeceler,<br> hâlâ içindeymiş sevmiş
-                        <br> ve bir zamanlar sevilmişler<br>
-                    </p>
-                </div>
-            </div>
-
-            <div class="card shadow">
-                <div class="card-body">
                     <p class="card-title">TUTULMA</p>
                     <p class="card-text">
                         bir şey diyecektim,<br> iki şey söyledim.<br> bir, iki daha üç oldu<br> anlatması güç oldu.<br>
@@ -207,6 +195,19 @@
                         <br> virgülle bağladılar tümlecini<br> yazık oldu,<br> okunmadan
                         <br> silik bir noktaya dokundu.<br>
 
+                    </p>
+                </div>
+            </div>
+
+            <div class="card shadow">
+                <div class="card-body">
+                    <p class="card-title">İSTANBUL</p>
+                    <p class="card-text">eski bir hikâyeymiş İstanbul<br> zaman durmuş köprülerinde<br> denizlerine dökülmüş
+                        sevgiler<br>
+                        <br> eski bir hikâyeymiş İstanbul<br> harfleri silinmiş, sonu eksilmiş<br> okumuşlar ama bitirmemişler
+                        <br>
+                        <br> eski bir hikâyeymiş İstanbul,<br> bulutlarına saklanmış bilmeceler,<br> hâlâ içindeymiş sevmiş
+                        <br> ve bir zamanlar sevilmişler<br>
                     </p>
                 </div>
             </div>
