--- a/siir.html
+++ b/siir.html
@@ -189,10 +189,10 @@
                 <div class="card-body">
                     <p class="card-title">CÜMLE</p>
                     <p class="card-text">
-                        Bir cümle kurdum,<br> yüklemi değil,<br> öznesi devrilmiş<br>
+                        Bir cümle kurdum,<br> yüklemi değil<br> öznesi devrilmiş;<br>
                         <br> sözde yüklemler<br> yükledim
-                        <br> devrik öznesine<br>
-                        <br> virgülle bağladılar tümlecini<br> yazık oldu,<br> okunmadan
+                        <br> devrik öznesine,<br>
+                        <br> virgülle bağladılar tümlecini<br> yazık oldu;<br> okunmadan
                         <br> silik bir noktaya dokundu.<br>
 
                     </p>
