--- a/index.html
+++ b/index.html
@@ -317,17 +317,22 @@
                     <div class="col-xl">
                         <h6 class="mt-3">Turkish</h6>
                         <ul>
-                            <li>Native</li>
+                            <li>Native (C2)</li>
                         </ul>
 
                         <h6 class="mt-3">English</h6>
                         <ul>
-                            <li>Fluent</li>
+                            <li>Fluent (C1-C2)</li>
                             <li>
                                 <a href="assets/img/IELTS.png" target="_blank" class="text-danger">
                                     IELTS: 7.5&nbsp;<i class="fas fa-link"></i>
                                 </a>
                             </li>
+                        </ul>
+
+                        <h6 class="mt-3">German</h6>
+                        <ul>
+                            <li>Beginner (A1)</li>
                         </ul>
                     </div>
 
