--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta property="og:title" content="Göktuğ Aşcı, MD" />
+    <meta property="og:title" content="Göktuğ Aşcı, MD, MSc" />
     <meta property="og:description" content="I am a medical doctor and a data engineer who builds full-stack cross-platform mobile
             applications. My passion is to bridge the gap between software
             engineering and medicine; to generate data-driven, inexpensive and
@@ -27,7 +27,7 @@
         gtag("config", "G-DL79QT8C8M");
     </script>
 
-    <title>Göktuğ Aşcı, MD</title>
+    <title>Göktuğ Aşcı, MD, MSc</title>
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
@@ -43,7 +43,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
-            <span class="d-block d-lg-none">Göktuğ Aşcı, MD</span>
+            <span class="d-block d-lg-none">Göktuğ Aşcı, MD, MSc</span>
             <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2"
                     src="assets/img/profile.png" alt="" /></span>
         </a>
@@ -201,11 +201,32 @@
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h4 class="mb-0">
+                            Data Engineer
+                        </h4>
+                        <div class="subheading mb-3">
+                            <a href="http://sellerx.com/" target="_blank" class="text-danger">SellerX:
+                                We Buy and Grow Amazon Businesses&nbsp;<i class="fas fa-link"></i></a>
+                        </div>
+                        <!-- <ul>
+                            <li>
+                                Preprocessed and analyzed 10000+ users’ anonymized health data (Pandas, Scikit-learn) to improve
+                                platform features and marketing performance
+                            </li>
+                        </ul> -->
+                    </div>
+                    <div class="flex-shrink-0 text-right">
+                        <span class="text-primary font-weight-bold">Berlin, Germany</span><br />
+                        <span class="text-primary">September 2021 - Present</span>
+                    </div>
+                </div>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-grow-1">
+                        <h4 class="mb-0">
                             Co-Founder, Product Manager, Full-Stack Developer
                         </h4>
                         <div class="subheading mb-3">
                             <a href="http://mealdoc.com/" target="_blank" class="text-danger">Mealdoc:
-                                AI Powered Healthy Diet, Healthcare&nbsp;<i class="fas fa-link"></i></a>
+                                AI-powered Healthy Diet&nbsp;<i class="fas fa-link"></i></a>
                         </div>
                         <ul>
                             <li>
@@ -215,13 +236,13 @@
                                 Designed and coded all front-end (Buefy.js, Vue.js, Apache Cordova) and back-end (AWS RDS, AWS S3, Heroku, Django, Django Rest Framework) features using cross-platform software allowing development and maintenance on one codebase for web, iOS, and Android applications
                             </li>
                             <li>
-                                Launched marketing campaigns and tracked KPIs using Google Ads and Google Analytics enabling 10000+ users to develop healthy eating habits
+                                Led a team of 6 nutritionists generating 200+ special recipes and completing 150+ online nutrition consultancy meetings, enabling 10000+ users to develop healthy eating habits.
                             </li>
                         </ul>
                     </div>
                     <div class="flex-shrink-0 text-right">
                         <span class="text-primary font-weight-bold">Istanbul, Turkey</span><br />
-                        <span class="text-primary">June 2020 - Present</span>
+                        <span class="text-primary">June 2020 - August 2021</span>
                     </div>
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -271,7 +292,7 @@
                             Co-Founder, Product Manager, Front-End Developer
                         </h4>
                         <div class="subheading mb-3">
-                            <a href="https://www.curiosmo.com/" target="_blank" class="text-danger">Curiosmo, Healthcare&nbsp;<i
+                            <a href="https://www.curiosmo.com/" target="_blank" class="text-danger">Curiosmo: Personal Exam Assistant&nbsp;<i
                                     class="fas fa-link"></i></a>
                         </div>
                         <ul>
@@ -848,7 +869,7 @@
     <footer class="footer">
         <div class="container p-3">
             <div class="text-center center-block">
-                <div class="text-muted mb-2">&copy; 2021 &#183; Göktuğ Aşcı, MD</div>
+                <div class="text-muted mb-2">&copy; 2021 &#183; Göktuğ Aşcı, MD, MSc</div>
                 <a class="" href="mailto:drgoktugasci@gmail.com"><i
                         class="fas fa-2x fa-envelope social"></i></a>&nbsp;&nbsp;&nbsp;
                 <a class="" href="https://www.linkedin.com/in/gokasci/" target="_blank"><i
