--- a/index.html
+++ b/index.html
@@ -87,10 +87,11 @@
                 <div class="text-center mb-3">
                     <img class="img-fluid img-profile rounded-circle d-lg-none mb-4 shadow" src="assets/img/profile.png" alt="" width="200" />
                 </div>
-                <h2 class="mb-3 d-none d-lg-block">
-                    Göktuğ Aşcı,
-                    <span class="text-danger"> MD</span>
-                </h2>
+                <div class="subheading mb-3 d-none d-lg-block" style="font-size:50px">
+                    <span style="color:black">Göktuğ Aşcı,</span>
+                    <span class="text-danger"> MD,</span>
+                    <span class="text-danger"> MSc</span>
+                </div>
                 <p class="lead mb-5">
                     I am <strong>a medical doctor</strong> and <strong>a data engineer</strong> who develops
                     <strong>full-stack, cross-platform software</strong>. My passion is to bridge the gap between software engineering and medicine to generate <strong>data-driven and inexpensive solutions to automate and improve healthcare services by utilizing big data and machine learning technologies.</strong>
