--- a/index.html
+++ b/index.html
@@ -485,6 +485,14 @@
                     <div class="tab-pane container fade" id="MachineLearning">
                         <ul class="fa-ul mb-0 mt-3">
                             <li class="mb-2">
+                                <a href="https://github.com/gasci/mlflow-ie" target="_blank"
+                                    class="text-danger">
+                                    <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Scikit-learn/MLflow &#183;
+                                    Serving an machine learning model using MLflow&nbsp;<i
+                                        class="fas fa-link"></i>
+                                </a>
+                            </li>
+                            <li class="mb-2">
                                 <a href="https://github.com/alakise/Heart-Disease/blob/main/classification/classification.ipynb" target="_blank"
                                     class="text-danger">
                                     <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Scikit-learn/XGBoost/Keras &#183;
