--- a/index.html
+++ b/index.html
@@ -394,6 +394,7 @@
                             <li>SQL</li>
                             <li>MongoDB</li>
                             <li>Docker</li>
+                            <li>Kubernetes</li>
                         </ul>
 
                         <h6>Data Science & Big Data</h6>
