--- a/index.html
+++ b/index.html
@@ -372,7 +372,37 @@
                     <div class="col-xl">
                         <h5 class="text-warning">Software Development & Design</h5>
 
-                        <h6 class="mt-3">Front-End Development</h6>
+                        <h6 class="mt-3">Data Science & Big Data</h6>
+                        <ul>
+                            <li>Pandas</li>
+                            <li>NumPy</li>
+                            <li>Matplotlib</li>
+                            <li>Seaborn</li>
+                            <li>Scikit-learn</li>
+                            <li>Keras</li>
+                            <li>MLflow</li>
+                            <li>Tableau</li>
+                            <li>Apache Spark (PySpark)</li>
+                            <li>Apache Hadoop</li>
+                            <li>Apache HBase</li>
+                            <li>R</li>
+                        </ul>
+                        
+                        <h6>Back-End Development & DevOps</h6>
+                        <ul>
+                            <li>Python</li>
+                            <li>Django</li>
+                            <li>Django Rest Framework</li>
+                            <li>Flask</li>
+                            <li>AWS S3, RDS, EC2</li>
+                            <li>Heroku</li>
+                            <li>SQL</li>
+                            <li>MongoDB</li>
+                            <li>Docker</li>
+                            <li>Kubernetes</li>
+                        </ul>
+
+                        <h6>Front-End Development</h6>
                         <ul>
                             <li>JavaScript</li>
                             <li>Apache Cordova</li>
@@ -385,33 +415,6 @@
                             <li>Adobe XD</li>
                         </ul>
 
-                        <h6>Back-End Development</h6>
-                        <ul>
-                            <li>Python</li>
-                            <li>Django</li>
-                            <li>Django Rest Framework</li>
-                            <li>AWS S3, RDS, EC2</li>
-                            <li>SQL</li>
-                            <li>MongoDB</li>
-                            <li>Docker</li>
-                            <li>Kubernetes</li>
-                        </ul>
-
-                        <h6>Data Science & Big Data</h6>
-                        <ul>
-                            <li>Pandas</li>
-                            <li>NumPy</li>
-                            <li>Matplotlib</li>
-                            <li>Seaborn</li>
-                            <li>Scikit-learn</li>
-                            <li>Keras</li>
-                            <li>MLflow</li>
-                            <li>Tableau</li>
-                            <li>Apache Spark</li>
-                            <li>Apache Hadoop</li>
-                            <li>Apache HBase</li>
-                            <li>R</li>
-                        </ul>
                     </div>
                     <div class="col-xl">
                         <br class="mb-4 d-block d-xl-none">
@@ -421,8 +424,6 @@
                         <ul>
                             <li>Scrum</li>
                             <li>Git</li>
-                            <li>Heroku</li>
-                            <li>Bash</li>
                             <li>Google Firebase Analytics</li>
                             <li>Google Firebase Cloud Messaging</li>
                             <li>Google Ads/Admob/Adsense</li>
@@ -694,12 +695,12 @@
                         </div>
                     </li>
                     <li>
-                        <a href="assets/txt/cumle.txt" target="_blank" class="text-danger">
+                        <a href="siir.html" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span> VII. Enka Yazadurmak Poetry Competition 2th Place, "Cümle"&nbsp;<i class="fas fa-link"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="assets/txt/kagit_kesigi.txt" target="_blank" class="text-danger">
+                        <a href="siir.html" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span> VI. Enka Yazadurmak Poetry Competition 2th Place, "Kağıt Kesiği"&nbsp;<i class="fas fa-link"></i>
                         </a>
                     </li>
