--- a/index.html
+++ b/index.html
@@ -339,12 +339,12 @@
                     <div class="col-xl">
                         <h6 class="mt-3">Turkish</h6>
                         <ul>
-                            <li>Native (C2)</li>
+                            <li>Native/Bilingual Proficiency (C2)</li>
                         </ul>
 
                         <h6 class="mt-3">English</h6>
                         <ul>
-                            <li>Fluent (C1-C2)</li>
+                            <li>Native/Bilingual Proficiency (C1-C2)</li>
                             <li>
                                 <a href="assets/img/IELTS.png" target="_blank" class="text-danger">
                                     IELTS: 7.5&nbsp;<i class="fas fa-link"></i>
@@ -354,7 +354,7 @@
 
                         <h6 class="mt-3">German</h6>
                         <ul>
-                            <li>Beginner (A1)</li>
+                            <li>Elementary Proficiency (A1)</li>
                         </ul>
                     </div>
 
