--- a/index.html
+++ b/index.html
@@ -231,13 +231,13 @@
                         </div>
                         <ul>
                             <li>
-                                Preprocessed and analyzed 10000+ users’ anonymized health data (Pandas, Scikit-learn) to improve platform features and marketing performance
+                                Preprocessed and analyzed 15000+ users’ anonymized health data (Pandas, Scikit-learn) to improve platform features and marketing performance
                             </li>
                             <li>
-                                Designed and coded all front-end (Buefy.js, Vue.js, Apache Cordova) and back-end (AWS RDS, AWS S3, Heroku, Django, Django Rest Framework) features using cross-platform software allowing development and maintenance on one codebase for web, iOS, and Android applications
+                                Designed and coded all front-end (Buefy.js, Vu5.js, Apache Cordova) and back-end (AWS RDS, AWS S3, Heroku, Django, Django Rest Framework) features using cross-platform software allowing development and maintenance on one codebase for web, iOS, and Android applications
                             </li>
                             <li>
-                                Led a team of 6 nutritionists generating 200+ special recipes and completing 150+ online nutrition consultancy meetings, enabling 10000+ users to develop healthy eating habits.
+                                Led a team of 6 nutritionists generating 200+ special recipes and completing 150+ online nutrition consultancy meetings, enabling 15000+ users to develop healthy eating habits.
                             </li>
                         </ul>
                     </div>
