--- a/index.html
+++ b/index.html
@@ -709,6 +709,11 @@
                 <h6 class="mt-3">Other Courses</h6>
                 <ul class="fa-ul mb-0">
                     <li>
+                        <a href="https://www.udemy.com/certificate/UC-dbcd5515-862b-4c9d-9cd2-4402b0e1f172/" target="_blank" class="text-danger">
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> Udemy &#183; Docker and Kubernetes: The Complete Guide&nbsp;<i class="fas fa-link"></i>
+                        </a>
+                    </li>
+                    <li>
                         <a href="assets/pdf/agile_foundations.pdf" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> LinkedIn &#183; Agile Foundations&nbsp;<i class="fas fa-link"></i>
                         </a>
